# HIMYC_Tauri

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md  build-release.sh  index.html  package-lock.json  package.json  playwright.config.ts  start-dev.sh  vite.config.ts
backend/: himyc-backend.spec  himyc_server.py  pyproject.toml
backend/src/howimetyourcorpus/: __init__.py
backend/src/howimetyourcorpus/api/: __init__.py  jobs.py  server.py
backend/src/howimetyourcorpus/app/: __init__.py  main.py  mainwindow_jobs.py  mainwindow_project.py  mainwindow_tabs.py  models_qt.py  models_qt_align.py  models_qt_common.py  models_qt_episodes.py  models_qt_kwic.py  ui_mainwindow.py  ui_utils.py  undo_commands.py  workers.py
backend/src/howimetyourcorpus/app/dialogs/: __init__.py  edit_align_link.py  normalize_options.py  opensubtitles_download.py  profiles.py  search_replace.py  segmentation_options.py  subtitle_batch_import.py
backend/src/howimetyourcorpus/core/: __init__.py  constants.py  export_utils.py  models.py
backend/tests/: benchmark_db_phase6.py  conftest.py  test_adapter_subslikescript.py  test_adapter_tvmaze.py  test_align.py  test_align_grouping.py  test_align_integrity.py  test_align_run_metadata.py  test_api_bridge.py  test_ci_workflows.py  test_cta_recommender.py  test_db_kwic.py  test_db_migrations.py  test_db_preparer_api.py  test_e2e_pipeline.py  test_export_phase5.py  test_export_qa.py  test_integration_pipeline.py  test_normalize_profiles.py  test_normalize_profiles_phase2.py  test_normalize_profiles_phase3.py  test_preparer_segmentation.py  test_preparer_service.py  test_preparer_timecodes.py  test_project_store_config_toml.py  test_project_store_prep_status.py  test_project_store_propagation.py  test_project_store_robustness.py  test_segment.py  test_subtitle_batch_parse.py  test_subtitles.py  test_ui_alignement.py  test_ui_concordance.py  test_ui_corpus_sources.py  test_ui_corpus_tab.py  test_ui_dialogs.py  test_ui_expert_tab.py  test_ui_guards.py  test_ui_inspecteur_profiles.py  test_ui_inspecteur_source_flow.py  (+10 more)
backend/tests/fixtures/: sample.srt  sample.vtt  subslikescript_episode.html  subslikescript_episode_structure_changed.html  subslikescript_series.html  subslikescript_series_links_changed.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json  tauri.release.unix.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+124 files in other folders)
